WSF-5687: Fix national hero image alignment in IE8

--- a/app/assets/stylesheets/partials/layout/_national.scss
+++ b/app/assets/stylesheets/partials/layout/_national.scss
@@ -56,6 +56,14 @@
         height: 80%;
       }
 
+      /* Old IE */
+      @include old-ie {
+        .img-rotate__item {
+          /* Centre align the hero image */
+          background-size: 50% 0;
+        }
+      }
+
       /* `.container` wraps around the logo, nav and tagline. This sets its height to be the full height of `.national-header` */
       .container {height: 100%;}
 
